--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -184,6 +184,12 @@ img {
 }
 .bg-black {
   background-color: #222222 !important;
+  background: url(../img/bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 .bg-red {
   background-color: #f56954 !important;
